--- a/lib/mololine_web/live/hr_live.html.heex
+++ b/lib/mololine_web/live/hr_live.html.heex
@@ -34,6 +34,10 @@
    <select id="role" name="role">
      <option value="admin">admin</option>
      <option value="customer">customer</option>
+     <option value="driver">driver/conductor</option>
+     <option value="accountant">accountant</option>
+     <option value="hr">hr</option>
+     <option value="manager">manager</option>
    </select>
   <label><%=@user.email%></label>
   <label><%=@user.confirmed_at%></label>
