add: made conductor and accountant subscribe to same chanel  22/10/22

--- a/lib/mololine_web/live/conductor_live.html.heex
+++ b/lib/mololine_web/live/conductor_live.html.heex
@@ -73,6 +73,8 @@
                 <b>ID:</b> <%=parceli.parcel.id%>  <b>Recipient:</b><%=parceli.parcel.recipient_name%><br>
             <%end%>
             <%end%>
+            <b>Enter accountants email </b>
+            <input type="text" name="accountantemail">
             <button type="submit">Ask For Parcels</button>
         </form>
     </article>
