--- a/lib/mololine_web/templates/page/accountant.html.heex
+++ b/lib/mololine_web/templates/page/accountant.html.heex
@@ -10,7 +10,7 @@
     <% base_url = "http://#{host}:#{port}"%>
     <label> <% base_url%></label>
     <li><a href={base_url <> "/items"}> Items stored in inventory -- for accountants</a></li>
-    <li><a href={base_url <> "/accountantlive"}>Accountant Live</a></li>
+    <li><a href={base_url <> "/accountantlive/"<> @conn.assigns.current_user.email}>Accountant Live</a></li>
     </ul>
   </article>
 </section>
