--- a/lib/mololine_web/live/parcel_delivery_booking_live.html.heex
+++ b/lib/mololine_web/live/parcel_delivery_booking_live.html.heex
@@ -47,6 +47,17 @@
   town.name
 end %>
 <%towns_list = towns_list ++ ["Custom Location"] %>
+<main class="container">
+    <p class="alert alert-info" role="alert"
+       phx-click="lv:clear-flash"
+       phx-value-key="info"><%= live_flash(@flash, :info) %></p>
+
+    <p class="alert alert-danger" role="alert"
+       phx-click="lv:clear-flash"
+       phx-value-key="error"><%= live_flash(@flash, :error) %></p>
+
+
+</main>
 
 <form phx-submit="submit" >
 
