--- a/lib/mololine_web/templates/item/index.html.heex
+++ b/lib/mololine_web/templates/item/index.html.heex
@@ -11,7 +11,9 @@
     </tr>
   </thead>
   <tbody>
+
 <%= for item <- @items do %>
+   <%= if item != nil do %>
     <tr>
       <td><%= item.parcel_id %></td>
       <td><%= item.town %></td>
@@ -23,6 +25,7 @@
         <span><%= link "Delete", to: Routes.item_path(@conn, :delete, item), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
+<% end %>
 <% end %>
   </tbody>
 </table>
