--- a/lib/mololine_web/live/booking_live.html.heex
+++ b/lib/mololine_web/live/booking_live.html.heex
@@ -16,7 +16,9 @@
  <li>
          <button style= "background-color:skyblue; width: 50px;height: 50px"> </button>Selected
  </li>
-
+<li>
+         <button style= "background-color:red; width: 50px;height: 50px"> </button>Selected By Others
+ </li>
   <li>
          <button style= "background-color:lightgreen; width: 50px;height: 50px"> </button>Bookable
  </li>
@@ -32,6 +34,7 @@
   <% IO.puts "The value in booked_seat_list is"%>
   <% IO.inspect booked_seat_list %>
   <% selectedseats = @selectedseats %>
+  <% othersselectedseats = @othersselectedseats %>
   <li> <strong>Seat Plan:</strong>
             <% seats = @seats %>
             </li>
@@ -62,6 +65,17 @@
                                           </td>
                              </tr>
                <%else%>
+               <%=if Enum.member?(othersselectedseats,row<>column) do %>
+               <tr>
+                                          <td>
+                                             <button
+
+                                             value = {row<>column}
+                                             style= "background-color:red ; width: 50px;height: 50px"><%= row %><%= column %></button>
+
+                                          </td>
+                             </tr>
+               <%else%>
               <tr>
                            <td>
                               <button
@@ -72,6 +86,7 @@
                            </td>
               </tr>
 
+           <% end %>
            <% end %>
            <% end %>
            <% else %>
