FIX:: - made accountant be able to remove parcels from office. - it is also checked in removal if that parcel item is in that office.
 31/10/22

--- a/lib/mololine_web/live/accountant_live.html.heex
+++ b/lib/mololine_web/live/accountant_live.html.heex
@@ -67,3 +67,16 @@
     <% end%>
   </article>
 </section>
+<section class ="row">
+    <article class="column" style="width:300px;">
+        <h2>Remove Parcel from Office</h2>
+        <form phx-submit="remove_parcel_from_office">
+
+            <label> Enter Parcel Id</label>
+            <input type="number" name="parcel_id" required>
+            <label> Enter Parcel Pin</label>
+            <input type="text" name="pin" required>
+            <button type="submit">Remove Parcel</button>
+        </form>
+    </article>
+</section>
