FIX:: - made sales resource 4/11/22

--- a/lib/mololine_web/templates/page/admin.html.heex
+++ b/lib/mololine_web/templates/page/admin.html.heex
@@ -33,6 +33,7 @@
       <li><a href={base_url <> "/accountantlive/"<>@conn.assigns.current_user.email}>Accountant Live</a></li>
       <li><a href={base_url <> "/items"}>Items stored in inventory -- for accountants</a></li>
       <label>Manager Page</label>
+      <li><a href={base_url <> "/sales"}>Sales</a></li>
       <li><a href={base_url <> "/seatplans"}>Seatplans</a></li>
       <li><a href={base_url <> "/vehicles"}>vehicles</a></li>
       <li><a href={base_url <> "/towns"}>Towns</a></li>
