--- a/lib/mololine_web/templates/page/manager.html.heex
+++ b/lib/mololine_web/templates/page/manager.html.heex
@@ -8,9 +8,10 @@
     <% port = @conn.port%>
     <% base_url = "http://#{host}:#{port}"%>
     <label> <% base_url%> </label>
-      <li><a href={base_url <> "/seatplans"}>Seatplans</a></li>
-      <li><a href={base_url <> "/vehicles"}>vehicles</a></li>
-      <li><a href={base_url <> "/towns"}>Towns</a></li>
+       <li><a href={base_url <> "/sales"}>Sales</a></li>
+           <li><a href={base_url <> "/seatplans"}>Seatplans</a></li>
+           <li><a href={base_url <> "/vehicles"}>vehicles</a></li>
+           <li><a href={base_url <> "/towns"}>Towns</a></li>
     </ul>
   </article>
 </section>
