FIX:: - made accountant only able to checkout parcel in his or her office 5/11/22

--- a/lib/mololine_web/live/accountant_live.html.heex
+++ b/lib/mololine_web/live/accountant_live.html.heex
@@ -53,7 +53,7 @@
      <% end%>
     </form>
     <% end%>
-      <h3>Parcels That have Paid </h3>
+      <h3>Parcels That have Paid in this Office </h3>
 
     <%= if @transportableparcels != nil  do%>
     <form phx-submit = "give_conductor_parcels">
