--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -25,7 +25,22 @@ a{ font: bold 15px Arial;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;}
 pre{padding: 1em;}
+article{
+    background-color: #F5F5DC;
+    color: #333333;
+    padding: 2px 6px 2px 6px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+    }
 
+    input[type="text"], textarea {
+      background-color : white;
+    }
+    input[type="number"], textarea {
+      background-color : white;
+    }
 .container{
   margin: 0 auto;
   max-width: 80.0rem;
