FIX:: - made made customers querry travel notices using to from and date to get filtered travel notices 5/11/22

--- a/lib/mololine_web/templates/page/customer.html.heex
+++ b/lib/mololine_web/templates/page/customer.html.heex
@@ -17,7 +17,7 @@
       <%towns_list = for town <- @towns do
       town.name
       end %>
-      <%= form_for @conn, Routes.travel_notice_path(@conn, :customer_index), fn f -> %>
+      <%= form_for @conn, "/travelnotices_index", fn f -> %>
 
       <%= label f, :from_place %>
       <%= select f, :from, towns_list,required: true %>
@@ -30,7 +30,6 @@
       <%= date_input f, :date ,required: true%>
       <%= submit "Search" %>
       <% end %>
-      <li><a href={base_url <> "/travelnotices"}>Travel Notices</a></li>
     </ul>
   </article>
 </section>
