FIX:: - made made customers querry travel notices using to from and date to get filtered travel notices 5/11/22

--- a/lib/mololine_web/templates/page/customer.html.heex
+++ b/lib/mololine_web/templates/page/customer.html.heex
@@ -19,7 +19,7 @@
       end %>
       <%= form_for @conn, "/travelnotices_index", fn f -> %>
 
-      <%= label f, :from_place %>
+      <%= label f, :from %>
       <%= select f, :from, towns_list,required: true %>
       <%= error_tag f, :from %>
 
