--- a/lib/mololine_web/templates/sale/index.html.heex
+++ b/lib/mololine_web/templates/sale/index.html.heex
@@ -1,7 +1,7 @@
 <h1>Listing Sales</h1>
 <h3>Total Sales , Ksh <%= @total %>.</h3>
 
-<h3>Total Sales This Month</h3>
+<h3>Total Sales This Month, KSh <%= @total_in_month %> .</h3>
 
 <table>
   <thead>
