FIX:: - made in parcel delivery booking a prompt to "select real parcel id " 26/11/22

--- a/lib/mololine_web/live/parcel_delivery_booking_live.html.heex
+++ b/lib/mololine_web/live/parcel_delivery_booking_live.html.heex
@@ -64,6 +64,7 @@ end %>
 <% # inputs for the parcel booking %>
 <label>Parcel ID </label>
 <select name="parcel_unique_id">
+    <option>Select Parcel ID</option>
 <%= for parcel <- @parcel_list do %>
 <option value = {parcel.id} phx-click = "select_parcel">
 <%=parcel.id %> </option>
