FIX:: - made customer home look better 29/11/22

--- a/lib/mololine_web/templates/page/customer.html.heex
+++ b/lib/mololine_web/templates/page/customer.html.heex
@@ -17,6 +17,7 @@
       <%towns_list = for town <- @towns do
       town.name
       end %>
+      <h1>Search Travel Notices</h1>
       <%= form_for @conn, "/travelnotices_index", fn f -> %>
 
       <%= label f, :from %>
